<resources>
    <string name="app_name">恰医航体温计</string>
    <string name="ble_disconnect">体温计已断开，请连接。</string>
    <string name="ble_connecting">设备连接中,请稍等</string>
    <string name="ble_wait_connect">请检查设备是否开启,努力连接中...</string>
    <string name="ble_connect">连接体温计</string>
    <string name="ble_scan">开始连接</string>
    <string name="bottom_home_tx">首页</string>
    <string name="bottom_history_tx">历史记录</string>
    <string name="bottom_nursery_tx">育儿知识</string>
    <string name="nearby_hospital">附近医院</string>
    <string name="bottom_setting_tx">设置</string>
    <string name="baby_name">宝宝名称</string>
    <string name="cur_value">%f&#8451;</string>
    <string name="temp_cur_value">最高温度%s&#8451;</string>
    <string name="temp_cur_value_f">最高温度%s℉</string>
    <string name="unit_c">℃</string>
    <string name="unit_f">℉</string>
    <string name="history_title">温度记录</string>
    <string name="temperature_higher_tip">设备已连接，温度偏高</string>
    <string name="temperature_lower_tip">设备已连接，温度过低</string>
    <string name="temperature_normal_tip">设备已连接，温度正常</string>
    <string name="setting_title">设置</string>
    <string name="child_temp_name">海绵宝宝</string>
    <string name="child_year_age">%d岁</string>
    <string name="child_max_age">%d岁%d月</string>
    <string name="child_month_age">%d月</string>
    <string name="temp_unit_name">摄氏度</string>
    <string name="compensate_name">温度补偿</string>
    <string name="compensate_value">温度补偿%1$.1f℃</string>
    <string name="high_low_name">高低温设置</string>
    <string name="warn_name">提示音设置</string>
    <string name="unit_name">单位</string>
    <string name="device_name">硬件信息</string>
    <string name="help_name">帮助</string>
    <string name="about_us">关于我们</string>
    <string name="hospital_name">附近医院</string>
    <string name="disconnect_warn">断开设备报警</string>

    <string name="notifyTitle">提示</string>
    <string name="notify_user">温馨提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>
    <string name="cur_temp_value">当前体温值:%d℃</string>
    <!--添加宝贝资料-->
    <string name="add_baby">添加宝贝</string>
    <string name="modify_baby_title">修改宝贝资料</string>
    <string name="head_title">头像</string>
    <string name="nick_name">昵称</string>
    <string name="baby_sex">性别</string>
    <string name="baby_age">年龄</string>
    <string name="baby_enable">设置为测量宝宝</string>
    <string name="add_tip">为了更好地监测宝宝体温信息，请正确录入宝宝信息</string>
    <string name="baby_save">保存</string>
    <string name="camera">拍照</string>
    <string name="fold">从相册库选择</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="select_sex">性别</string>
    <string name="birthday_select">出生年月日</string>
    <string name="done_submit">确定</string>
    <!--硬件信息-->
    <string name="device_info">硬件信息</string>
    <string name="ble_rssi">蓝牙信号强度</string>
    <string name="device_mac">MAC地址</string>
    <string name="device_version">固件版本</string>
    <string name="device_id">设备ID</string>
    <string name="app_version">v1.1.3.4</string>

    <!--提示音-->
    <string name="sound_title">提示音设置</string>
    <string name="sound_strong">强烈</string>
    <string name="sound_light">舒缓</string>
    <string name="sound_default">默认</string>
    <string name="temp_higher_value">%1$.1f℃体温过高</string>
    <string name="temp_lower_value">%1$.1f℃体温过低</string>

    <string name="unit_set_title">单位设置</string>
    <string name="centigrade">摄氏度</string>
    <string name="fahrenheit">华摄氏度</string>

    <!--高低设置-->
    <string name="warn_higher_tip">宝宝高于此温度会提现你</string>
    <string name="warn_lower_tip">宝宝低于此温度会提现你</string>
    <string name="higher_warn_value">高温报警值</string>
    <string name="lower_warn_value">低温报警值</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>



    <string name="temp_25">25</string>
    <string name="temp_26">26</string>
    <string name="temp_27">27</string>
    <string name="temp_28">28</string>
    <string name="temp_29">29</string>
    <string name="temp_30">30</string>
    <string name="temp_31">31</string>
    <string name="temp_32">32</string>
    <string name="temp_33">33</string>
    <string name="temp_34">34</string>
    <string name="temp_35">35</string>
    <string name="temp_36">36</string>
    <string name="temp_37">37</string>
    <string name="temp_38">38</string>
    <string name="temp_39">39</string>
    <string name="temp_40">40</string>

    <string name="two_second">2s</string>
    <string name="two_min">2min</string>
    <string name="five_min">5min</string>
    <string name="fifteen_min">15min</string>
    <string name="thirty_min">30min</string>
    <!--附近医院-->
    <string name="hospital_key">医院</string>
    <string name="baidu">百度地图</string>
    <string name="gaode">高德地图</string>
    <string name="tencent">腾讯地图</string>
    <string name="uninstall_baidu_map">未安装百度地图</string>
    <string name="uninstall_gaode_map">未安装高德地图</string>
    <string name="uninstall_tencent_map">未安装腾讯地图</string>

    <!--选择baby-->
    <string name="option_baby">选择测量宝宝</string>
    <!--关于-->
    <string name="about">关于</string>
    <string name="privacy">隐私与协议</string>
    <string name="safe_protocols">安全以及注意事项</string>
    <string name="cur_temperature">当前温度:%s</string>
    <string name="baby_name_v">%s</string>
    <string name="del_item">删除</string>
    <string name="input_age_tip">请填写正确的出生日期</string>
    <string name="input_nickname_tip">请填写宝贝名称</string>
</resources>
