<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/head_dialog_width"
    android:layout_height="@dimen/picker_dialog_height"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape_layout">

    <TextView
        android:id="@+id/picker_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/notify_user"
        android:textColor="@color/color_title_baby"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/split_top_line"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/picker_title"
        android:layout_weight="0"
        android:background="@color/color_title_baby" />


    <TextView
        android:id="@+id/notice_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/split_line"
        android:layout_below="@+id/split_top_line"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="@string/temp_higher_value"/>


    <ImageView
        android:id="@+id/split_line"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_weight="0"
        android:background="@color/color_title_baby" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:visibility="gone"
            android:textColor="@color/color_baby_tip"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:visibility="gone"
            android:background="@color/color_title_baby" />

        <TextView
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/done_submit"
            android:textColor="@color/color_baby_tip"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>